# spycam

./: README.md
farneback_of/: CMakeLists.txt  main.cpp
simpletest/: CMakeLists.txt  simpletest_raspicam.cpp
